--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["command-line-utilities", "network-programming"]
 anyhow = "*"
 async-trait = "*"
 clap = { version = "*", features = ["derive"] }
+dashmap = "*"
 nix = { version = "*", features = ["user"] }
 
 # See https://github.com/doy/pty-process/pull/8#issuecomment-1829236622.
