--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,11 @@ nix = { version = "*", features = ["user"] }
 # See https://github.com/doy/pty-process/issues/10.
 pty-process = { git = "https://github.com/samuela/pty-process.git", rev = "968c2dc6af18addce179e9396f50bac6c1ee0cca", features = ["async"] }
 
-# See https://github.com/warp-tech/russh/pull/231.
-russh = { git = "https://github.com/samuela/russh.git", rev = "ea64035c504984f99d18b49d935dc97d5ecdb396" }
-russh-keys = { git = "https://github.com/samuela/russh.git", rev = "ea64035c504984f99d18b49d935dc97d5ecdb396" }
+# We need
+#  * https://github.com/warp-tech/russh/pull/231 [merged, not yet released]
+#  * https://github.com/warp-tech/russh/pull/241 [merged, not yet released]
+russh = { git = "https://github.com/warp-tech/russh.git", rev = "44a2392bd0bc170f6f829cddbefa89a93392851d" }
+russh-keys = { git = "https://github.com/warp-tech/russh.git", rev = "44a2392bd0bc170f6f829cddbefa89a93392851d" }
 
 serde = "*"
 serde_json = "*"
