--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ pty-process = { git = "https://github.com/samuela/pty-process.git", rev = "968c2
 #  * https://github.com/warp-tech/russh/pull/231 [merged, not yet released]
 #  * https://github.com/warp-tech/russh/pull/241 [merged, not yet released]
 #  * https://github.com/warp-tech/russh/pull/243 [merged, not yet released]
-russh = { git = "https://github.com/warp-tech/russh.git", rev = "1541fe581fe677199723da22891f7019fc54dce8" }
-russh-keys = { git = "https://github.com/warp-tech/russh.git", rev = "1541fe581fe677199723da22891f7019fc54dce8" }
+russh = { git = "https://github.com/warp-tech/russh.git", rev = "1541fe581fe677199723da22891f7019fc54dce8", features = ["openssl"] }
+russh-keys = { git = "https://github.com/warp-tech/russh.git", rev = "1541fe581fe677199723da22891f7019fc54dce8", features = ["openssl"] }
 
 serde = "*"
 serde_json = "*"
