--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,8 @@ nix = { version = "*", features = ["user"] }
 # See https://github.com/doy/pty-process/issues/10.
 pty-process = { git = "https://github.com/samuela/pty-process.git", rev = "968c2dc6af18addce179e9396f50bac6c1ee0cca", features = ["async"] }
 
-# See https://github.com/warp-tech/russh/issues/261 as to why the openssl feature is needed.
-russh = { version = "0.43.0", features = ["openssl"] }
-russh-keys = { version = "0.43.0", features = ["openssl"] }
-
+russh = "*"
+russh-keys = "*"
 serde = "*"
 serde_json = "*"
 tokio = { version = "*" }
