Cargo.toml: fix license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 authors = ["Samuel Ainsworth <skainsworth@gmail.com>"]
 default-run = "sshenanigans"
-license = "MIT"
+license = "AGPL-3.0"
 description = "Build your own SSH server 🛜"
 repository = "https://github.com/samuela/sshenanigans"
 readme = "README.md"
